Actualizacion de codigo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
     <section id="personal-info" class="container">
         <h2>Información Personal</h2>
         <p><strong>Nombre:</strong> Jose Ricardo Casallas</p>
-        <p><strong>Email:</strong> <a href="mailto:tucorreo@ejemplo.com">josericardocasasllas11@gmail.com</a></p>
+        <p><strong>Email:</strong>josericardocasasllas11@gmail</p>
+        <div class="email-link">
+            <a href="https://www.google.com/intl/es/gmail/about/">Enviar Correo electronico</a>
+        </div>
+    <!--/////////////////////////////////////////////////////////////////////////////////////////////////////-->
         <p><strong>Teléfono:</strong>3124122863</p>
         <p><strong>Dirección:</strong> [Tu Dirección]</p>
     </section>
@@ -77,6 +81,6 @@
             <li>Habilidad 4</li>
         </ul>
     </section>
-    
+   
 </body>
 </html>
